# jpg

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
components/tjpgd/: CMakeLists.txt  idf_component.yml
components/tjpgd/include/: tjpgdcnf.h
main/: CMakeLists.txt  app_config.c  app_config.h  ch422_driver.c  ch422_driver.h  comm_can.c  comm_can.h  comm_rs485.c  comm_rs485.h  comm_usb.c  comm_usb.h  display_driver.c  display_driver.h  gallery.c  gallery.h  idf_component.yml  jpeg_decoder.c  jpeg_decoder.h  main.c  sd_card.c  sd_card.h  sdspi_ch422_host.c  sdspi_ch422_host.h  ui.c  ui.h
